--- a/src/main/webapp/WEB-INF/views/province/list.html
+++ b/src/main/webapp/WEB-INF/views/province/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="/layout :: head">
     <title>List Province</title>
 </head>
 <body>
@@ -36,5 +37,6 @@
     </tr>
     </tbody>
 </table>
+<footer th:replace="/layout :: footer"></footer>
 </body>
 </html>
