--- a/src/main/webapp/WEB-INF/views/province/update.html
+++ b/src/main/webapp/WEB-INF/views/province/update.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="/layout :: head">
     <title>Update Province</title>
 </head>
 <body>
@@ -20,5 +21,6 @@
         <input type="submit" value="Save"/>
     </form>
 </div>
+<footer th:replace="/layout :: footer"></footer>
 </body>
 </html>
