--- a/src/main/webapp/WEB-INF/views/customer/create.html
+++ b/src/main/webapp/WEB-INF/views/customer/create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="/layout :: head">
     <title>Create Customer</title>
 </head>
 <body>
@@ -30,5 +31,6 @@
         <input type="submit" value="Save"/>
     </form>
 </div>
+<footer th:replace="/layout :: footer"></footer>
 </body>
 </html>
