--- a/src/main/webapp/WEB-INF/views/customer/update.html
+++ b/src/main/webapp/WEB-INF/views/customer/update.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<!--<head th:replace="/layout :: head">-->
+<head th:replace="/layout :: head">
     <title>Update Customer</title>
 </head>
 <body>
@@ -30,6 +30,6 @@
         <input type="submit" value="Edit"/>
     </form>
 </div>
-<!--<footer th:replace="/layout :: footer"></footer>-->
+<footer th:replace="/layout :: footer"></footer>
 </body>
 </html>
