--- a/src/main/webapp/WEB-INF/views/province/create.html
+++ b/src/main/webapp/WEB-INF/views/province/create.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<!--<head th:replace="/layout :: head">-->
+<head th:replace="/layout :: head">
     <title>Create Province</title>
 </head>
 <body>
@@ -21,5 +21,6 @@
         <input type="submit" value="Save"/>
     </form>
 </div>
+<footer th:replace="/layout :: footer"></footer>
 </body>
 </html>
